[tool.poetry]
name = "aiotorrent"
# version is a calculated guess. Subsequent updates will follow the semantic versioning convention.
version = "0.8.1"
description = "An ultra-lightweight torrent library written in pure Python."
authors = ["Shakir <shakirali.sacube@gmail.com>"]
readme = "README.md"
repository = "https://github.com/Mys7erio/aiotorrent"
keywords = ["python", "python3", "bittorrent", "bittorrent-client", "downloading", "streaming"]
classifiers = [
	"Development Status :: 4 - Beta",
	"Environment :: Web Environment",
	"Intended Audience :: Developers",
	"Operating System :: OS Independent",
	"Programming Language :: Python",
	"Programming Language :: Python :: 3.11",
	"Topic :: Communications :: File Sharing",
	"Topic :: Internet :: WWW/HTTP :: HTTP Servers",
	"Topic :: Multimedia",
	"Topic :: Software Development :: Libraries :: Python Modules",	
]

[tool.poetry.dependencies]
python = "^3.11"
bitstring = "^4.0.1"
starlette = {version = "^0.23.1", optional = true}
uvicorn = {version = "^0.20.0", optional = true}
fast-bencode = "^1.1.4"

[tool.poetry.extras]
stream-support = ["starlette", "uvicorn"]


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
