[tool.poetry]
name = "aiotorrent"
# version is a calculated guess. Subsequent updates will follow the semantic versioning convention.
version = "0.8.2"
description = "An ultra-lightweight torrent library written in pure Python."
authors = ["Shakir <shakirali.sacube@gmail.com>"]
readme = "README.md"
repository = "https://github.com/Mys7erio/aiotorrent"
keywords = ["python", "python3", "bittorrent", "bittorrent-client", "downloading", "streaming"]
classifiers = [
	"Development Status :: 4 - Beta",
	"Environment :: Web Environment",
	"Intended Audience :: Developers",
	"Operating System :: OS Independent",
	"Programming Language :: Python",
	"Programming Language :: Python :: 3.11",
	"Topic :: Communications :: File Sharing",
	"Topic :: Internet :: WWW/HTTP :: HTTP Servers",
	"Topic :: Multimedia",
	"Topic :: Software Development :: Libraries :: Python Modules",	
]

[tool.poetry.dependencies]
python = "^3.11"
bitstring = "^4.0.1"
starlette = "^0.32.0.post1"
uvicorn = "^0.24.0.post1"
fast-bencode = "^1.1.4"

[tool.poetry.extras]
stream-support = ["starlette", "uvicorn"]


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
